--- a/rizshop/android/app/src/main/AndroidManifest.xml
+++ b/rizshop/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
-    <!-- Required to query activities that can process text, see:
+    <!-- Required to fetch data from the Internet. -->
+    <uses-permission android:name="android.permission.INTERNET" />
          https://developer.android.com/training/package-visibility and
          https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
 
